added tag names

--- a/article.HTML
+++ b/article.HTML
@@ -7,13 +7,19 @@
     <title>Document</title>
 </head>
 <body>
+   <header>
     <h1> Manchester morning news</h1>
+    <nav>
     <ul>
         <li><a href="/Users/nathansaide/projects/my-first-webpage/home-page.HTML">Home</a></li>
         <li><a href="https://www.manchestereveningnews.co.uk/">News</a></li>
          <li><a href="https://www.bbc.co.uk/weather/2643123">Weather</a></li>
          <li><a href="https://manchester.locanto.com/">Classifieds</a></li>
     </ul>
+    </nav>
+   </header>
+   <main>
+      <article>
     <h2>Manchester is the real tech capital of the UK</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla luctus libero eget ante dapibus, sit amet mollis mauris varius.
        Sed rutrum egestas ante, ac fringilla nulla tincidunt et. In posuere, lorem nec tincidunt tempus, leo libero euismod urna,
@@ -29,9 +35,12 @@
        Fusce tortor mi, placerat laoreet consequat quis, malesuada vitae ex. Sed iaculis a metus nec finibus. Morbi vitae eleifend nunc. Duis gravida pulvinar diam,
        a sodales neque iaculis eu. Aliquam venenatis, enim vitae pretium maximus, odio massa pharetra dolor, quis lobortis augue orci nec sem.
     </p>
-    <div>
+    <figure>
     <img src="https://i2-prod.manchestereveningnews.co.uk/incoming/article11678887.ece/ALTERNATES/s615b/JS95852406.jpg" alt="Manchester Skyline" allign="middle">
-    </div>
+    <figcaption>
+       Manchester Skyline
+    </figcaption>
+    </figure>
     <p>Phasellus porttitor venenatis ultricies. Maecenas vehicula, odio ut consectetur consequat, felis turpis auctor elit,
        gravida hendrerit ligula leo sed lorem. Maecenas tincidunt ante in vehicula faucibus. In vitae laoreet erat. Aenean convallis eros id dui maximus tristique.
        Ut vehicula felis auctor accumsan dapibus. Cras posuere quam tincidunt ante euismod rutrum. Proin non luctus felis. Suspendisse aliquam vulputate ex id mollis.
@@ -41,6 +50,8 @@
        et suscipit urna sapien et massa. Nam porta dui diam, ut consectetur ex malesuada sit amet. Vestibulum mauris velit, mollis et maximus et, egestas vitae nisl. Donec ante libero, volutpat vitae efficitur non,
        interdum et risus. Aenean molestie ultricies nisi, vitae ornare augue porta a. Nullam quis lorem pretium turpis suscipit convallis. Praesent in nisl eu turpis ultrices malesuada.
     </p>
+    </article>
+    <aside>
     <h3>Author</h3>
     <img src="https://memegenerator.net/img/images/10797687.jpg" width="90" height="100">
     <h4>Rubeus Hagrid</h4>
@@ -49,4 +60,11 @@
        Morbi vitae vulputate metus. Vestibulum id felis ut libero sollicitudin feugiat sit amet venenatis eros. Nunc volutpat velit bibendum, porta lectus non, rutrum mauris. Curabitur non magna malesuada, sagittis risus ut,
        ultricies nulla. Sed eu odio non quam pellentesque iaculis.
     </p>
+    </aside>
+    </main>
+    <footer>
+       <p>
+          &copy; Manchester Morning News
+       </p>
+    </footer>
     </html>
