my first css added

--- a/article.HTML
+++ b/article.HTML
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="main.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,7 +11,8 @@
    <header>
     <h1> Manchester morning news</h1>
     <nav>
-    <ul>
+
+    <ul class="links">
         <li><a href="/Users/nathansaide/projects/my-first-webpage/home-page.HTML">Home</a></li>
         <li><a href="https://www.manchestereveningnews.co.uk/">News</a></li>
          <li><a href="https://www.bbc.co.uk/weather/2643123">Weather</a></li>
@@ -36,7 +38,7 @@
        a sodales neque iaculis eu. Aliquam venenatis, enim vitae pretium maximus, odio massa pharetra dolor, quis lobortis augue orci nec sem.
     </p>
     <figure>
-    <img src="https://i2-prod.manchestereveningnews.co.uk/incoming/article11678887.ece/ALTERNATES/s615b/JS95852406.jpg" alt="Manchester Skyline" allign="middle">
+    <img src="https://i2-prod.manchestereveningnews.co.uk/incoming/article11678887.ece/ALTERNATES/s615b/JS95852406.jpg" alt="Manchester Skyline" allign="middle" class="fluid-image">
     <figcaption>
        Manchester Skyline
     </figcaption>
@@ -53,7 +55,7 @@
     </article>
     <aside>
     <h3>Author</h3>
-    <img src="https://memegenerator.net/img/images/10797687.jpg" width="90" height="100">
+    <img src="https://memegenerator.net/img/images/10797687.jpg" width="280" height="300">
     <h4>Rubeus Hagrid</h4>
     <p>Donec quis erat ante. In nulla nunc, posuere ut sodales vel, dictum vel magna. Praesent ac nunc elementum, venenatis quam consequat, varius massa. Mauris varius ante orci, nec auctor arcu lacinia vel.
        Vestibulum tempor ante ipsum, bibendum dictum nisi dapibus quis. Quisque ac quam in urna sodales euismod. Sed convallis nibh ut purus lobortis, quis commodo ex tempus. Integer suscipit viverra leo in accumsan.
